release/src/router/dbus-1.8.8/test/data/invalid-messages/too-much-header-padding.message
## has one byte extra header padding

## VALID_HEADER includes a LENGTH Header and LENGTH Body
VALID_HEADER method_call

HEADER_FIELD INTERFACE
TYPE STRING
STRING 'org.freedesktop.Foo'
HEADER_FIELD MEMBER
TYPE STRING
STRING 'Bar'
HEADER_FIELD PATH
TYPE OBJECT_PATH
OBJECT_PATH '/foo'

HEADER_FIELD UNKNOWN
TYPE STRING
STRING 'a'
ALIGN 8
BYTE 0
END_LENGTH Header
START_LENGTH Body
END_LENGTH Body
